--- a/voter/client/package.json
+++ b/voter/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
     "mongoose": "^5.11.17",
+    "passport": "^0.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
