Setup Mongo-Atlas connection.

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 JWT_SECRET= partmentpants
-MONGODB_URI= mongodb://localhost:27017/voter_user_db
+MONGODB_URI= process.env.MONGODB_URI || 'mongodb://localhost:27017/voter_user_db',
+     {
+       useNewUrlParser: true,
+       useUnifiedTopology: true,
+       useCreateIndex: true,
+       useFindAndModify: false
+     }
+
